# hansard-nlp-explorer

./: .gitignore  AGENTS.md  CLAUDE.md  FALSE_POSITIVE_ANALYSIS.md  MANUAL_VALIDATION_SUMMARY.md  MIGRATION_GUIDE.md  PHASE1_INVENTORY.md  README.md  REMAINING_FIXES.md  REPOSITORY_CLEANUP_PLAN.md  REPOSITORY_STATUS.md  SESSION_SUMMARY.md  VISUALIZATION_IMPROVEMENTS.md  environment.yml  extract_suffrage_debates_from_reliable.py  generate_validation_sample.py  manual_validation.py  notes.md  prepare_suffrage_input.py  pyproject.toml  pytest.ini  run_data_generation.sh  run_full_analysis.sh  run_quick_test.sh  setup.py  show_sample_data.py  show_validation_samples.py  test_unified_modules.py  turnwise_prompt_v4.md  verify_all_systems.py  verify_reproducibility.sh
.beads/: hansard-nlp-explorer.db
analysis/: PILOT_STUDY_SUMMARY.md  speakers_gender_temporal_fixed.json
apps/: api_server.py  build_fts_database.py  build_sqlite_index.py  build_static_data.py  export_data.py  export_pipeline_data.py  female_opposition_reader.py  index.html  regenerate_debates_sample.py  research_cli.py  research_demo.py  validation_app.py
cleanup_tracking/: CLEANUP_PROGRESS_SUMMARY.md  FINAL_CLEANUP_REPORT.md  PHASE1_ARCHIVE_PLAN.md  PHASE1_DUPLICATE_REMOVAL.md  PHASE2_TEST_PLAN.md  PHASE3_DATA_VALIDATION.md  TESTING_PRINCIPLES.md
data-hansard/: DERIVED_DATA_DOCUMENTATION.md  house_members_gendered_updated.parquet.backup
docs/: CORRECTNESS_AUDIT_REPORT.md  DATASET_STATISTICS.md  DATA_ARCHITECTURE.md  DATA_SOURCES_SUFFRAGE.md  END_TO_END_GUIDE.md  FINAL_SUMMARY.md  README.md  WHAT_TO_RUN.md  (+4 more)
(+487 files in other folders)
