[project]
name = "hansard-nlp-explorer"
version = "0.1.0"
description = "Analysis tools for UK Parliamentary debates (Hansard) with gender analysis focus"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.5",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "tenacity>=8",
    "polars>=0.20",
    "python-Levenshtein>=0.25",
    "nltk>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
